--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "search-blog-example",
   "displayName": "Search Blog Example",
   "description": "",
+  "publisher":"Rudraprasad Mohapatra",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.86.0"
