--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "search-blog-example",
-  "displayName": "Search Blog Example",
+  "name": "blog-search-on-webdevsimplified",
+  "displayName": "Blog Search On Webdevsimplified",
   "description": "",
-  "publisher":"Rudraprasad Mohapatra",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Rudraprasad-Mohapatra/search-blog-example-vscode-extension"
+  },
+  "publisher":"RudraprasadMohapatra",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.86.0"
